# gramps-testbed-v2

./: .copier-answers.yml  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  gramps-testbed-v2.code-workspace  pdca.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: act.md  builder.md  planner.md  publisher.md  reviewer.md  signoff.md
.github/workflows/: check-gates.yml  require-linked-issue.yml
PCDA/: quality-cycle.md
PCDA/quality-cycle/: 01-the-quality-cycle.md  02-cycle-artifacts.md  03-cycle-automation.md  04-validation-tooling.md  05-repository-integration.md  06-quality-cycle-guidelines.md  07-case-study-ci-hardening.md  08-glossary.md  09-parallel-lanes.md  10-adapting.md
docs/: INTEGRATION.md  parallel-lanes.md  principles.md  quality-cycle.md  template-catch-up.md  template-feedback.md
docs/quality-cycle/: 00-overview.md  01-the-quality-cycle.md  03-cycle-automation.md  04-validation-tooling.md  06-quality-cycle-guidelines.md
engine/: 20260529 - Mantis Export.csv  README.md  essential-fixes.tsv  fork-bases.tsv
engine/baselines/: run-addon-interface.json  run-addon-unit-60.json  run-addon-unit-61.json  run-addon-unit.json  run-interface.json  (+1 more)
process/: act-log.md  principles.md  t3-upstream-pdca-input.md  validate-numbered-bundles.md
templates/: brief.md.tpl  commit-msg.txt.tpl  design-proposal.md.tpl  tracker-comment.md.tpl
tests/: test_brief.py  test_config.py  test_driver_slice.py  test_flow_slice.py  test_gates_target.py  test_progress.py  test_publish_slice.py  test_revalidate.py
wiki/: .gitignore  README.md
(+674 files in other folders)
